--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ReviveWastage</string>
+    <string name="profile">Profile</string>
+    <string name="buy_product">Buy Product</string>
+    <string name="sell_product">Sell product</string>
 </resources>
