--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     //nav drawer
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="enter_bid_description">Enter bid description</string>
+    <string name="enter_bid_amount">Enter bid amount</string>
+    <string name="place_a_bid">Place a bid</string>
 </resources>
